@@ -5,6 +5,7 @@
 * PaymentExpress: Correct endpoints [steveh] #4827
 * Adyen: Add option to elect which error message [aenand] #4843
 * Reach: Update list of supported countries [jcreiff] #4842
+* Paysafe: Truncate address fields [jcreiff] #4841
 
 == Version 1.134.0 (July 25, 2023)
 * Update required Ruby version [almalee24] #4823
